--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.1.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
