--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "react-youtube": "^10.1.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
