--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.5",
+    "@next/third-parties": "^14.2.7",
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
@@ -25,12 +26,13 @@
     "firebase": "^10.2.0",
     "framer-motion": "^10.16.4",
     "hamburger-react": "^2.5.0",
-    "next": "13.4.12",
+    "next": "^14.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-youtube": "^10.1.0",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.1",
     "turndown": "^7.2.0"
   },
